corrected page numbers.

--- a/doc/latex/gnutls.tex
+++ b/doc/latex/gnutls.tex
@@ -87,8 +87,10 @@
 \backmatter
 
 \printindex
+\addcontentsline{toc}{chapter}{Index}
 
 \bibliography{gnutls}
+\addcontentsline{toc}{chapter}{Bibliography}
 
 \cleardoublepage
 
