--- a/doc/TODO
+++ b/doc/TODO
@@ -3,6 +3,10 @@ anything), contact the developer's mailing list (gnutls-dev@lists.gnupg.org),
 in order to avoid having people working on the same thing. 
 
 Current list:
+* Try to use _gnutls_hash_fast() and _gnutls_hmac_fast() where
+  possible. Especially when hashing/hmacing records. This would
+  allow direct usage of CPU or chip acceleration, which do not
+  typically allow multiple hashes.
 * Add certificate image support (see RFC3709, RFC6170)
 * Perform signature calculation in PKCS #11 using not plain
   RSA but rather the combination of RSA-SHA256, RSA-SHA1 etc.
