--- a/doc/latex/gnutls.tex
+++ b/doc/latex/gnutls.tex
@@ -37,6 +37,8 @@
 
 \setcounter{tocdepth}{1}
 \tableofcontents
+\listoftables
+\listoffigures
 
 \pagestyle{fancy}
 \fancyhead[RE]{\slshape \rightmark}
