--- a/doc/latex/gnutls.tex
+++ b/doc/latex/gnutls.tex
@@ -15,7 +15,14 @@
 \usepackage{verbatim}
 \usepackage{listings}
 \usepackage{xcolor}
+\usepackage{afterpage}
+\usepackage{float}
+\usepackage{morefloats}
 \usepackage[greek,english]{babel}%for euro sign
+
+\renewcommand{\textfraction}{0.00}
+\renewcommand{\floatpagefraction}{0.8}
+\renewcommand{\dblfloatpagefraction}{0.8}
 
 \hypersetup{
     colorlinks,%
