--- a/doc/cha-gtls-app.texi
+++ b/doc/cha-gtls-app.texi
@@ -423,8 +423,8 @@ problematic clients and servers is achieved.
 
 @item %NO_EXTENSIONS @tab
 will prevent the sending of any TLS extensions in client side. Note
-that TLS 1.2 requires extensions to be used, thus this option must
-be used with care.
+that TLS 1.2 requires extensions to be used, as well as safe
+renegotiation thus this option must be used with care.
 
 @item %DISABLE_SAFE_RENEGOTIATION @tab
 will disable safe renegotiation
