pdf is the image format for latex.

--- a/doc/latex/gnutls.tex
+++ b/doc/latex/gnutls.tex
@@ -20,6 +20,8 @@
 \usepackage{morefloats}
 \usepackage[greek,english]{babel}%for euro sign
 
+\DeclareGraphicsExtensions{.pdf}
+
 \renewcommand{\textfraction}{0.00}
 \renewcommand{\floatpagefraction}{0.8}
 \renewcommand{\dblfloatpagefraction}{0.8}
