--- a/doc/latex/gnutls.bib
+++ b/doc/latex/gnutls.bib
@@ -28,8 +28,8 @@
 @Misc{TLSTKT,
   author = "Joseph Salowey and Hao Zhou and Pasi Eronen and Hannes Tschofenig",
   title = "Transport Layer Security {(TLS)} Session Resumption without Server-Side State",
-  month="January"
-  year="2008"
+  month="January",
+  year="2008",
   note = "Available from \url{http://www.ietf.org/rfc/rfc5077}",
   url = "http://www.ietf.org/rfc/rfc5077"
 }
@@ -45,7 +45,7 @@
 @Misc{ECRYPT,
  publisher = "European Network of Excellence in Cryptology II",
  title = "{ECRYPT II Yearly Report on Algorithms and Keysizes (2009-2010)}",
- url = "http://www.ecrypt.eu.org/documents/D.SPA.13.pdf".
+ url = "http://www.ecrypt.eu.org/documents/D.SPA.13.pdf",
  year=2010
 }
 
