Added epub version of manual

--- a/doc/latex/cover-epub.tex
+++ b/doc/latex/cover-epub.tex
@@ -1,10 +1,28 @@
 \thispagestyle{empty}
+
+\vspace*{\stretch{2}}
+\begin{center}
+\huge{The GnuTLS manual}
+\vspace*{\stretch{2}}
+\end{center}
+
+%\newpage
+%\vspace*{\stretch{2}}
+%\begin{center}
+%\includegraphics[width=6cm]{../gnutls-logo}
+%\end{center}
+
+%\vspace*{\stretch{2}}
+
+\newpage
+
+\thispagestyle{empty}
 \vspace*{\stretch{2}}
 
 
-\begin{quotation}
+\begin{flushleft}
 Copyright \copyright{} 2011 Free Software Foundation, Inc.
-\end{quotation}
+\end{flushleft}
 
 \begin{flushleft}
 Permission is granted to copy, distribute and/or modify this document
@@ -15,12 +33,3 @@ copy of the license is included in the section entitled ``GNU Free
 Documentation License''.
 \end{flushleft}
 
-\newpage
-\thispagestyle{empty}
-
-\vspace*{\stretch{2}}
-\begin{center}
-\includegraphics[width=6cm]{../gnutls-logo.pdf}
-\end{center}
-
-\vspace*{\stretch{2}}
